--- a/security/src/main/resources/application.yaml
+++ b/security/src/main/resources/application.yaml
@@ -41,6 +41,25 @@ spring:
     expiration: 60000
     refresh-token:
       expiration: 6040000000
+
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: a069661d45c92aa53c90918fbe2be8a3  # rest api key
+            client-secret: VjnJJiwISfTlM0rc8XaKSnD5h2anH9UT # secret key
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            client-authentication-method: client_secret_post
+            authorization-grant-type: authorization_code
+            scope: profile_nickname, account_email, birthday
+            client-name: kakao
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kauth.kakao.com/v2/user/me
+            user-name-attribute: id
   data:
     redis:
       host: 127.0.0.1
