--- a/security/src/main/resources/application.yaml
+++ b/security/src/main/resources/application.yaml
@@ -53,7 +53,7 @@ spring:
             client-authentication-method: client_secret_post
             authorization-grant-type: authorization_code
             scope: profile_nickname, account_email, birthday
-            client-name: kakao
+            client-name: Kakao
         provider:
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
