--- a/security/src/main/resources/application.yaml
+++ b/security/src/main/resources/application.yaml
@@ -58,7 +58,7 @@ spring:
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
             token-uri: https://kauth.kakao.com/oauth/token
-            user-info-uri: https://kauth.kakao.com/v2/user/me
+            user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
   data:
     redis:
