--- a/security/build.gradle
+++ b/security/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 //	implementation 'org.redisson:redisson-spring-boot-starter:3.24.3'
+
+	// firebase
+	implementation 'com.google.firebase:firebase-admin:7.1.1'
 }
 
 tasks.named('test') {
